Fixed Tooltip Inheriting Rotate for Collapsers
This is an example on how to fix the tooltips from inheriting the rotate
transforms in collapsers.

If there is any other CSS that rotates an element with a tooltip inside,
the additions will also be required there.

This should fix #156

--- a/src/scss/components/_collapsers.scss
+++ b/src/scss/components/_collapsers.scss
@@ -11,8 +11,18 @@
       transition-property: transform;
     }
 
+    .md-tooltip-container {
+      transform: rotate3d(0, 0, 1, 0deg);
+      transition-duration: $md-transition-time;
+      transition-property: transform;
+    }
+
     &--flipped {
       transform: rotate3d(0, 0, 1, 180deg);
+
+      .md-tooltip-container {
+        transform: rotate3d(0, 0, 1, -180deg);
+      }
     }
   }
 }
